--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Sample</string>
+    <string name="customize_dashboard">Customize Dashboard</string>
+    <string name="company_name">Company Name</string>
 </resources>
